Pankaj | #2169 | Spacing and alignment issues in observations tab

--- a/ui/app/styles/clinical/_observations.scss
+++ b/ui/app/styles/clinical/_observations.scss
@@ -79,7 +79,7 @@
     display: inline-block;
     color: $mediumGray;
     float: left;
-    padding: 15px 10px;
+    padding: 10px 10px 0;
     width: 100px;
     @media screen and (max-width: 595px) {
       padding: 4px 10px;
